# gig-launch

./: Gig Control Center.spec  cmds.md  connection.py  gig_close.py  gig_launcher.py  main_ui.py  main_ui.spec  pyproject.toml  settings.json  snap.py  switch_defender.py  switch_sleep.py  utils.py
assets/: make_icon.py
