[project]
name = "gig-launch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "pyautogui>=0.9.54",
    "pycaw>=20251023",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "pyscreeze>=1.0.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
